reduce number of classes
git-svn-id: https://svn.apache.org/repos/asf/geronimo/devtools/eclipse-plugin/trunk@1147527 13f79535-47bb-0310-9956-ffa450edef68